--- a/SimpleDocker/src/04/Dockerfile
+++ b/SimpleDocker/src/04/Dockerfile
@@ -5,11 +5,10 @@ WORKDIR /home
 RUN apt-get update && apt-get upgrade -y && \
     apt-get install gcc -y \
     libfcgi-dev \
-    spawn-fcgi && \
-    rm -rf /var/lib/apt/lists
+    spawn-fcgi
 
-COPY ./../03/fast_cgi.c .
-COPY ./../03/main.sh .
-COPY ./../03/nginx.conf /etc/nginx/nginx.conf
+COPY fast_cgi.c .
+COPY main.sh .
+COPY nginx.conf /etc/nginx/nginx.conf
 
 CMD ["./main.sh"]
