--- a/#4 LinuxMonitoring_v2/src/02/Dockerfile
+++ b/#4 LinuxMonitoring_v2/src/02/Dockerfile
@@ -10,4 +10,5 @@ RUN apt update && apt install nano -y \
 
 CMD ["./main.sh", "asdf", "zxcv.gg", "100Mb"]
 
-# sudo docker build -t test/check:v0 . && docker run -it test/check:v0
+# docker build -t test/check:v0 . && docker run -it --name asdzxc test/check:v0
+# docker rm asdzxc && docker rmi test/check:v0 && docker build -t test/check:v0 . && docker run -it --name asdzxc test/check:v0
